--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <!-- Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#686868">
+<!-- Windows Phone -->
+<meta name="msapplication-navbutton-color" content="#4285f4">
+<!-- iOS Safari -->
+<meta name="apple-mobile-web-app-status-bar-style" content="#4285f4">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
