dashboard with name row on top working

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Alpha Pro System</title>
@@ -10,17 +11,19 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <!-- Chrome, Firefox OS and Opera -->
-<meta name="theme-color" content="#686868">
-<!-- Windows Phone -->
-<meta name="msapplication-navbutton-color" content="#4285f4">
-<!-- iOS Safari -->
-<meta name="apple-mobile-web-app-status-bar-style" content="#4285f4">
+  <!-- <meta name="theme-color" content="#686868"> -->
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#686868">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#686868">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
